[package]
name = "server"
version = "0.1.0"
authors = ["implodingocelot"]
description = "literal garbage server but idk"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ImplodingOcelot/server"
repository = "https://github.com/ImplodingOcelot/server"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
crate-type = ["rlib"]

[dependencies]
json = "0.12.4"